[package]
name = "depot_sync"
version = "0.1.0"
authors = ["Nolan Davidson <ndavidson@chef.io>"]

[dependencies]
hyper = "0.9"
rustc-serialize = "*"
serde = "0.8"
serde_derive = "0.8"
serde_yaml = "0.5"

[dependencies.habitat_depot_client]
path = "../habitat/components/builder-depot-client"

[dependencies.habitat_core]
path = "../habitat/components/core"

[dependencies.habitat_common]
path = "../habitat/components/common"
